--- a/css/style4.css
+++ b/css/style4.css
@@ -17,6 +17,7 @@ body{
   height: 100%;
   min-height: 100vh;
   width: 100%;
+  max-width: 1440px;
   font-family: 'Roboto', sans-serif;
   align-self: center;
   justify-content: space-between;
@@ -124,7 +125,7 @@ height: 100%;
   background-color: seashell;
 }
 
-h1.hit-the-floor, h2.hit-the-floor{
+h1.hit-the-floor{
   color: #ffe149
 }
 .hit-the-floor {
@@ -383,43 +384,36 @@ main{
 }
 
 
-h2{
-  display: block;
-  width: 100%;
-}
+
 
 
 .card {
-  display: flex;
-  box-shadow: rgba(46, 43, 41, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgb(15, 13, 12) 0px -3px 0px inset;
+   box-shadow: rgba(255, 87, 15, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgb(253, 118, 0) 0px -3px 0px inset;
+  padding: 1rem;
   margin: 2rem;
-  border: 3px solid rgb(141, 135, 134);
+  border: 3px solid salmon;
   border-radius: 15px 20px 20px 15px;
   -webkit-border-radius: 15px 20px 20px 15px;
   -moz-border-radius: 15px 20px 20px 15px;
   -ms-border-radius: 15px 20px 20px 15px;
   -o-border-radius: 15px 20px 20px 15px;
-  background-color: bisque;  flex-direction: column;
-  padding-bottom: 2rem;
+  background-color: bisque; padding-bottom: 2rem;
   width: 350px;
-  min-height: 590px;
+  height: 590px;
   -webkit-border-radius:15px ;
   -moz-border-radius:15px ;
   -ms-border-radius:15px ;
   -o-border-radius:15px ;
   margin-bottom: 1rem;
-  align-items: center;
-  padding: 2rem;
 }
 
 .card__titulo {
   font-size: 1.4375rem;
-  width: 100%;
 }
 
 .card img{
-width: 100%;
-height: auto;
+width: 220px;
+  height: 300px;
 }
 .card__descricao {
   font-size: 1.1875rem;
@@ -656,7 +650,7 @@ article#details{
   -o-border-radius: 15px;
   justify-content: flex-start;
   padding-left: 2rem;
-  font-size: 2rem;
+  font-size: 1rem;
 }
   #details>img{
     width: 50%;
@@ -703,24 +697,31 @@ section.article-row {
 
 
 
-
-
-article:nth-child(3) {
+article:nth-child(1) {
   display: flex;
   flex-flow: row wrap;
- 
-  height: 600px;
+  width: 40%;
+  height: 560px;
   justify-content: space-around;
   align-items: center;
-  background-color: rgb(241, 143, 132);
-  font-size: 1rem;
+  background-color: rgb(85, 181, 0);
 }
 
 article:nth-child(2) {
   display: flex;
   flex-flow: row wrap;
-  background-color: rgb(193, 245, 148);
-  font-size: 1rem;
+  width: 40%;
+  height: 560px;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(194, 31, 13);
+}
+
+article:nth-child(3) {
+  display: flex;
+  flex-flow: row wrap;
+  width: 50%;
+  height: 100%;
   justify-content: space-around;
   align-items: center;
 }
@@ -782,7 +783,7 @@ input {
   background-color: rgb(238, 255, 0);
   height: 200px;
   min-width: 300px;
-  width: 40%;
+  width: 90%;
 }
 
 .boxIconsArticle , .article-index{
@@ -800,9 +801,9 @@ align-self: center;
   border-radius: 15px;
 }
 
- strong.marker {
+.marker {
   height: 60px;
- width: 400px;
+  width: 400px;
   background-color: rgb(115, 255, 157);
   text-align: center;
   transition: .3s;
@@ -810,7 +811,7 @@ align-self: center;
   border-radius: 15px;
   align-self: center;
   padding: 1rem;
-  margin-bottom: 2rem;
+  margint-bottom: 2rem;
 }
 .cardBtn{
   display: flex;
